--- a/notebooks/1. EDA.ipynb
+++ b/notebooks/1. EDA.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "source": [
     "### 1. Problem Statement\n",
-    "- This proj\n",
+    "- This project\n",
     "\n",
     "### 2. Data Collection\n",
     "-Dataset Source - \n"
