--- a/notebooks/1. EDA.ipynb
+++ b/notebooks/1. EDA.ipynb
@@ -1972,7 +1972,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "proj02",
    "language": "python",
    "name": "python3"
   },
@@ -1988,7 +1988,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.9"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ca52f4a3e3b8a32ad5c7955b7110f946a0a8c77d02b3b419ccfbf32de8174bf6"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
