--- a/notebooks/2. Model Training.ipynb
+++ b/notebooks/2. Model Training.ipynb
@@ -2526,7 +2526,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gfuel_env",
+   "display_name": "proj02",
    "language": "python",
    "name": "python3"
   },
@@ -2545,7 +2545,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8d3d7147e9d7cfb9f99ce1707d1f2830a1e2bcccedcd9298fb9ba4a7ea427b32"
+    "hash": "ca52f4a3e3b8a32ad5c7955b7110f946a0a8c77d02b3b419ccfbf32de8174bf6"
    }
   }
  },
